# esutils

./: LICENSE  README  README.md  eeutils.py  pyproject.toml  quanty.py  setup.py
code/fortran/singlecluster/: Makefile  lapack.f90  lapack.mod  linalg.f90  linalg.mod  modcore.f90  modcore.mod  modfunc.f90  modfunc.mod  modinit.f90  modinit.mod  moduniinv.f90  moduniinv.mod  singlecluster.f90  singlecluster.in  subroutines.f90  teste.f90  types.f90  types.mod  utils.mod
code/maple/: TMO6-mine.mws  TMO6.mws  calc_d4_multiplet.mws  calc_dn.mws  calc_octaedro.mws  calc_octaedro.ods  gauss.mws  gauss_mine.mws  teste.mws
code/matlab/: dispersion2.m - teste do Rodrigo de cluster perturbation  in_params STRO.m  sortfilter.m
code/matlab/corehole/: corehole.m
code/matlab/doublecluster/: LMFO.in  LaVO3.in  NiO.in  Rh2O3.in  RuO2.in  SCRO.in  SFMO.in  SFO.in  STRO.in  STRO_10.in  STRO_20.in  STRO_35_isolante.in  STRO_35_metalico.in  STRO_40.in  STRO_40_isolante.in  STRO_60.in  STRO_80.in  SYRO.in  SrRuO3.in  SrRuO3_core2.in  SrTiO3.in  SrVO3.in  bocquet_Cr2O3.in  bocquet_LaCrO3.in  bocquet_LaTiO3.in  bocquet_LaVO3.in  bocquet_SrFeO3.in  bocquet_SrTiO3.in  bocquet_TiO.in  bocquet_TiO2.in  bocquet_V2O3.in  bocquet_V2O5.in  bocquet_YTiO3.in  references.txt  rodrigo_(Sr,Ca)VO3.in  rodrigo_SrVO3.in  rodrigo_V2O3_insulating.in  rodrigo_V2O3_metallic.in  rodrigo_VO2_insulating.in  rodrigo_VO2_metallic.in  (+1 more)
esutils/: analyse_psi.py  atomic.py  broadening.py  lcao.py  parameters.py
src/esutils/: __init__.py  broadening.py  lcao.py  peaks.py  quanty.py
src/esutils/data/: atomic.txt  (+1 more)
(+129 files in other folders)
