[project]
name = "esutils"
version = "0.0.1"
authors = [
  { name="Henrique P Martins", email="hpmartins@gmail.com" },
]
description = "A small package with electronic structure utilities"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hpmartins/esutils"
